--- a/package.json
+++ b/package.json
@@ -7,7 +7,18 @@
     "hapi": "^16.4.3",
     "mysql": "^2.13.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-inject": "^4.2.0",
+    "gulp-rimraf": "^0.2.1",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-tslint": "^8.1.1",
+    "gulp-typescript": "^3.2.0",
+    "tsd": "^0.6.0-beta.5",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
