--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/hapi": "^16.1.6",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.0",
     "typescript": "^2.4.1"
