--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,14 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
         "noImplicitAny": true,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
-        }
+        "target": "es5"
     },
     "include": [
         "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "typings/main",
+        "typings/index.d.ts"
     ]
 }
