--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashboard-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API to support dashboard.billtrust.local",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -16,12 +16,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "0.0.32",
     "@types/hapi": "^16.1.6",
+    "@types/mysql": "0.0.34",
     "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-tslint": "^8.1.1",
     "gulp-typescript": "^3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.1"
   },
   "dependencies": {
-    "hapi": "^16.4.3"
+    "@types/knex": "0.0.61",
+    "bottlejs": "^1.6.1",
+    "config": "^1.26.1",
+    "hapi": "^16.4.3",
+    "hapi-cors": "^1.0.1",
+    "hapi-rate-limit": "^1.3.2",
+    "knex": "^0.13.0",
+    "mysql": "^2.13.0"
   }
 }
