--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/config": "0.0.32",
-    "@types/hapi": "^16.1.6",
+    "@types/knex": "0.0.61",
     "@types/mysql": "0.0.34",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
@@ -27,12 +27,12 @@
     "typescript": "^2.4.1"
   },
   "dependencies": {
-    "@types/knex": "0.0.61",
+    "@types/cors": "^2.8.1",
     "bottlejs": "^1.6.1",
     "config": "^1.26.1",
+    "cors": "^2.8.4",
+    "fastify": "^0.29.0",
     "hapi": "^16.4.3",
-    "hapi-cors": "^1.0.1",
-    "hapi-rate-limit": "^1.3.2",
     "knex": "^0.13.0",
     "mysql": "^2.13.0"
   }
